Thu Dec 15 10:37:08 CET 2016
        Implementing:
        - /map/in, /map/out API, to allow frontends to store
        plain text contracts in database and retrieving them
        by looking for their hashcodes.


Fri Nov 18 18:54:07 CET 2016
	Misc. minor updates to match API changes from exchange 0.2.
	Releasing taler-merchant 0.2.0. -CG

Mon Oct 10 16:27:57 CEST 2016
        Implementing:
        - /track API, to map transactions to wire transfers and
        viceversa.
        - /history API, to get the list of transactions in DB.
        - merchant "instances", to run make multiple shops on the
        same backend.
        -MS

Tue Jun  7 15:17:45 CEST 2016
	Store signing key used by exchange in DB.  Might be useful
	in the future when we implement GC for the backenddb. -CG

Wed Jun  1 17:27:36 CEST 2016
	Releasing taler-merchant-0.0.0. -CG