@@ -5,13 +5,24 @@
 
 # General settings for the backend.
 [merchant]
+
+# Use TCP or UNIX domain sockets?
 SERVE = tcp
 
-# Which HTTP port does the backend listen on?
+# Which HTTP port does the backend listen on?  Only used if "SERVE" is 'tcp'.
 PORT = 9966
 
+# Which IP address should we bind to? i.e. 127.0.0.1 or ::1 for loopback.
+# Can also be given as a hostname.  We will bind to the wildcard (dual-stack)
+# if left empty.  Only used if "SERVE" is 'tcp'.
+# BIND_TO =
+
+
+# Which unix domain path should we bind to? Only used if "SERVE" is 'unix'.
 UNIXPATH = ${TALER_RUNTIME_DIR}/merchant.http
+# What should be the file access permissions (see chmod) for "UNIXPATH"?
 UNIXPATH_MODE = 660
+
 
 # Where does the backend store the merchant's private key?
 KEYFILE = ${TALER_DATA_HOME}/merchant/merchant.priv
