@@ -19,9 +19,6 @@ CURRENCY = EUR
 # Which port do we run the backend on? (HTTP server)
 PORT = 8082
 
-# FIXME: is this one used?
-HOSTNAME = localhost
-
 # How quickly do we want the exchange to send us our money?
 # Used only if the frontend does not specify a value.
 # FIXME: EDATE is a bit short, 'execution_delay'?
