@@ -1,3 +1,7 @@
+Mon Mar  6 00:59:25 CET 2017
+	Implement BIND_TO option to allow binding backend to a particular
+	IP address (#4752).  Enabling use of dual-stack by default. -CG
+
 Thu Dec 15 10:37:08 CET 2016
         Implementing:
         - /map/in, /map/out API, to allow frontends to store
